[project]
name = "aiagents-stock"
version = "0.2.0"
description = "AI 智能体股票分析系统"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "plotly>=5.15.0",
    "yfinance>=0.2.18",
    "akshare>=1.11.0",
    "tushare>=1.3.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pytz",
    "ta>=0.10.2",
    "reportlab>=4.0.0",
    "peewee>=3.17.0",
    "schedule>=1.2.0",
    "pywencai>=0.7.0",
    "jieba>=0.42.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # P1/P2 新增
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.2",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["venv", "docs", "*.db"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # 行长由 ruff format 处理
    "B008",  # streamlit 大量在默认参数中调用
]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
